--- a/workflows/vpn.yml
+++ b/workflows/vpn.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Install Tailscale
       run: |
         curl -fsSL https://tailscale.com/install.sh | sh
-        sudo tailscale up --authkey=${{ tskey-auth-kGmmPGuZ4321CNTRL-ixrcndN3eyLLN27zEk2HyLPf9p4G2Yaf }} --hostname=github-runner
+        sudo tailscale up --authkey=${{ secrets.TAILSCALE_AUTHKEY }} --hostname=github-runner
 
     - name: Run local SOCKS proxy (via SSH)
       run: |
