--- a/.github/workflows/runvpn.yml
+++ b/.github/workflows/runvpn.yml
@@ -17,7 +17,8 @@ jobs:
             --hostname=github-runner \
             --advertise-exit-node \
             --accept-routes \
-            --reset
+            --reset \
+            --login-server=https://login.tailscale.com
 
       - name: Keep the runner alive
         run: sleep 6h
